--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,18 @@
-name: Create Release
-
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+name: Build Release
 
 env:
   REPOSITORY_FOLDER: "src" # subfolder with source code
   PLUGIN_NAME: "Parachute" # main file of the project
 
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'src/Version.cs' # only on change of the file with the version number string in it
+  workflow_dispatch:
+
+# job to create a new release
 jobs:
   create-release:
     runs-on: ubuntu-latest
@@ -56,7 +59,7 @@ jobs:
       if: env.new_version == 'true'
       run: dotnet publish -c Release
 
-    - name: Prepare CS2-UpdateManager ${{ env.REPOSITORY_NAME }}.info
+    - name: Prepare ${{ env.REPOSITORY_NAME }}.info
       if: env.new_version == 'true'
       run: |
         echo "version: ${{ env.version }}" > /home/runner/work/${{ env.REPOSITORY_NAME }}/${{ env.REPOSITORY_NAME }}/${{ env.REPOSITORY_FOLDER }}/bin/Release/net8.0/publish/${{ env.PLUGIN_NAME }}.info
